# api-psicologa

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  API_DOCUMENTATION.md  CLAUDE.md  Dockerfile  PERFORMANCE_OPTIMIZATION.md  README.md  deploy.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/agents/: fastapi-kerykeion-expert.md
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/routers/: __init__.py  astrology.py  health.py
app/core/: __init__.py  cache.py  config.py  exceptions.py  logging.py  metrics.py  middleware.py  rate_limiter.py
app/schemas/: __init__.py  astrology.py
app/services/: __init__.py  astrology_service.py  async_astrology_service.py
deploy/: portainer-stack.yml
scripts/: performance_benchmark.py
tests/: test_main.py  test_performance.py  test_performance_simple.py
